# IDE-A

./: .py  README.md  TreeView_TEST.py  line_nums_TEST.py  main.py  main_linux.py  main_windows.py  pyproject.toml  requirements.txt
IDE/: main.py
src/: New_UI_windows.py  New_UI_windows_py3.10.py  New_UI_windows_py3.9.py  old_main_windows.py
src/IDE-A_package_1lolplayer1/: main_linux.py  main_windows.py
